        * platform/mac/fast/text/ligature-subdivision.html: Added.
        * platform/mac/fast/text/script-tests: Added.
        * platform/mac/fast/text/script-tests/TEMPLATE.html: Copied from LayoutTests/fast/js/script-tests/TEMPLATE.html.
        * platform/mac/fast/text/script-tests/ligature-subdivision.js: Added.

2009-10-29  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Rubberstamped by Adam Roben.

        Remove two tests that pass on the buildbot.

        * platform/qt/Skipped:

2009-10-29  Dan Bernstein  <mitz@apple.com>

        Updated expected result for Tiger

        * platform/mac-tiger/fast/text/international/thai-line-breaks-expected.txt:

2009-10-29  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed Qt buildbot fix.

        Add some files to skipped that depend on phonon support,
        which is disabled on the Qt buildbot for now.

        * platform/qt/Skipped:

2009-10-29  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Rubberstamped by Adam Roben.

        Remove tests that pass after the change introduced in r50289.

        * platform/qt/Skipped:

2009-10-29  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Steve Falkenburg.

        Windows Release bots are having problems in xmlhttprequest tests, Skipping them temporarily
        to see if this eliminates the problem, and it is a test causing httpd problems.

        * platform/win/Skipped:

2009-10-29  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Don't run JavaScript URLs in view source mode
        https://bugs.webkit.org/show_bug.cgi?id=30881

        Test that we don't run JavaScript URLs in view source mode.

        This test actually passes before this change.  I don't know how to
        actually run JavaScript URLs in view source frames using DRT, but it's
        possible in an abitrary embedding of WebKit.

        * http/tests/security/view-source-no-javascript-url-expected.txt: Added.